@@ -288,7 +288,8 @@
             <code>export ACE_ROOT=$PWD</code><br>
         <code>export TAO_ROOT=$ACE_ROOT/TAO</code><br>
         <code>export CIAO_ROOT=$TAO_ROOT/CIAO</code><br>
-        <code>export DANCE_ROOT=$TAO_ROOT/DAnCE</code><br></li>
+        <code>export DANCE_ROOT=$TAO_ROOT/DAnCE</code><br>
+        <code>export DDS_ROOT=</code><br></li>
           <li>
             Check the doxygen version at the shell by executing the command:<br>
             <code>doxygen --version</code>
@@ -319,6 +320,7 @@
         export TAO_ROOT=$ACE_ROOT/TAO<br>
         export CIAO_ROOT=$TAO_ROOT/CIAO<br>
         export DANCE_ROOT=$TAO_ROOT/DAnCE<br>
+        export DDS_ROOT=<br>
         $ACE_ROOT/bin/generate_rel_manpages<br>
         scp ACE-html.tar.gz ACE-html.tar.bz2 ACE-html.zip ACE-html.tar.gz.md5 ACE-html.tar.bz2.md5 ACE-html.zip.md5 bczar@download.dre.vanderbilt.edu:/export/www/download.dre/ACE+TAO-distribution
  </code>
